Cambiando código de formulario

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
                 </div>
             </div>
             <div class="section__main section-6__main">
+                <!-- <form class="form-contact" action="https://formsubmit.co/frankid74@gmail.com" method="POST"> -->
                 <form class="form-contact">
                     <!-- <label for="name">Nombre:</label> -->
                     <input type="text" class="form-name" id="name" name="name" pattern="[A-Za-z\s]+" placeholder="Tu Nombre" required>
@@ -255,7 +256,7 @@
                     <input type="email" class="form-email" id="email" name="email" placeholder="Tu Email" pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
                   
                     <!-- <label for="subject">Asunto:</label> -->
-                    <input type="text" class="form-subject" id="subject" name="subject" pattern="[A-Za-z\s]+" placeholder="Asunto" >
+                    <input type="text" class="form-subject" id="subject" name="subject"  placeholder="Asunto" >
                   
                     <!-- <label for="message">Comentario:</label> -->
                     <textarea  class="form-message" id="message" name="message" rows="5" maxlength="2500" placeholder="Mensaje" required></textarea>
