--- a/index.html
+++ b/index.html
@@ -78,16 +78,12 @@
                     <h1 class="section__salute">Hola, soy Frank.</h1>
                     <div class="section-1__paragraphs">
                         <p class="section__paragraph">
-                            Soy un desarrollador Web de Vigo, actualmente enfocado en el Front-End. Solía trabajar como
-                            administrador de Sistemas, pero tras idas y vueltas terminé como programador, que es algo
-                            que me
-                            encanta.
+                            Saludos, soy un desarrollador de Vigo, con conocimiento de React para el front-end. Mi enfoque actual se centra en la creación de experiencias de usuario dinámicas y atractivas.
+
+
                         </p>
                         <p class="section__paragraph">
-                            En lo que se refiere al Back-End si es necesario puedo trabajar con ello también, mis bases
-                            para
-                            aprender a programar fueron con Java, aunque actualmente utilizo PHP para la creación del
-                            Back-End.
+                            En cuanto al back-end, tengo conocimientos en Java y Php. Aunque puedo trabajar eficientemente con ambos, mi destreza actual se inclina más hacia la creación de APIs utilizando Php. Estoy comprometido a ampliar mis conocimientos y adaptarme a las tecnologías más actuales para ofrecer mejores soluciones.
 
                         </p>
                     </div>
@@ -111,24 +107,19 @@
             <div class="section__main">
                 <div class="section-2__paragraphs ">
                     <p class="section__paragraph">
-                        <strong>Hola soy Frank Ruiz.</strong> Soy un desarrollador junior que en el último año he estado
-                        enfocado en el front, me gusta el poder recibir el diseño e ir maquetándolo desde cero, tambíen
-                        puedo crear CRUDS y apis para el backend. Eventualmente tengo pensado aprender frameworks, pero
-                        por ahora creo que es importante cimentar bien las bases de mi ruta de aprendizaje.
+                        <strong>Hola, soy Frank Ruiz,</strong> un desarrollador junior con nociones tanto de back como de front. En el último año, he dedicado mi tiempo a perfeccionar mis habilidades en la creación de interfaces atractivas y funcionales a partir de diseños. Mi enfoque principal ha sido construir CRUDs y APIs para el backend, consolidando así una base sólida en mi camino de aprendizaje.
                     </p>
                     <p class="section__paragraph">
-                        Aparte de programar suelo pasar mis ratos libres leyendo mangas y libros, así como editando
-                        comics con photoshop para relajarme un rato. Alguna que otra vez también me dediqué a subtitular
-                        para pasar el rato.
+                        Si bien tengo planes de adentrarme en frameworks en el futuro, actualmente considero crucial afianzar mis conocimientos fundamentales. Mi objetivo es crecer de manera constante y contribuir al éxito de proyectos desafiantes.
                     </p>
                     <p class="section__paragraph">
-                        En lo que se refiere a idiomas, mi nivel de inglés es lo suficientemente bueno para leer
-                        documentación y copiar las respuestas de stackoverflow.
+                        Fuera del mundo de la programación, disfruto de mis momentos de ocio leyendo mangas y libros. Además, encuentro relajación editando cómics con Photoshop. En ocasiones, me sumerjo en la actividad de subtitulación para agregar variedad a mis pasatiempos.
                     </p>
                     <p class="section__paragraph">
-                        Tengo muchas ganas de poder trabajar con un grupo apropiado y seguir mejorando mis habilidades.
-                        Si te interesa contactarte conmigo, por favor hazlo por cualquiera de los medios que dejo en la sección de
-                        contacto.
+                        En cuanto a idiomas, mi habilidad en inglés es lo suficientemente competente como para leer documentación y comprender respuestas en plataformas como Stack Overflow.
+                    </p>
+                    <p class="section__paragraph">
+                        Estoy ansioso por colaborar con un equipo dinámico que comparta mi entusiasmo y seguir perfeccionando mis habilidades. Si estás interesado en conectarte conmigo, por favor, no dudes en utilizar cualquiera de los medios de contacto que he proporcionado en la sección correspondiente.
                     </p>
                 </div>
             </div>
