--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                     <h1 class="section__salute">Hola, soy Frank.</h1>
                     <div class="section-1__paragraphs">
                         <p class="section__paragraph">
-                            Saludos, soy un desarrollador de Vigo, con conocimiento de React para el front-end. Mi enfoque actual se centra en la creación de experiencias de usuario dinámicas y atractivas.
+                            Soy un Desarrollador full-stack, con conocimiento de React para el front-end. Mi enfoque actual se centra en la creación de experiencias de usuario dinámicas y atractivas.
 
 
                         </p>
                         <p class="section__paragraph">
-                            En cuanto al back-end, tengo conocimientos en Java y Php. Aunque puedo trabajar eficientemente con ambos, mi destreza actual se inclina más hacia la creación de APIs utilizando Php. Estoy comprometido a ampliar mis conocimientos y adaptarme a las tecnologías más actuales para ofrecer mejores soluciones.
+                            En cuanto al back-end, tengo conocimientos en Java y PHP. Aunque puedo trabajar eficientemente con ambos, mi destreza actual se inclina más hacia la creación de APIs utilizando PHP. Estoy comprometido a ampliar mis conocimientos y adaptarme a las tecnologías más actuales para ofrecer mejores soluciones.
 
                         </p>
                     </div>
@@ -107,7 +107,7 @@
             <div class="section__main">
                 <div class="section-2__paragraphs ">
                     <p class="section__paragraph">
-                        <strong>Hola, soy Frank Ruiz,</strong> un desarrollador junior con nociones tanto de back como de front. En el último año, he dedicado mi tiempo a perfeccionar mis habilidades en la creación de interfaces atractivas y funcionales a partir de diseños. Mi enfoque principal ha sido construir CRUDs y APIs para el backend, consolidando así una base sólida en mi camino de aprendizaje.
+                        <strong>Hola, soy Frank Ruiz,</strong> Desarrollador Multiplataforma & Web con conocimientos tanto de back como de front. En el último año, he dedicado mi tiempo a perfeccionar mis habilidades en la creación de interfaces atractivas y funcionales a partir de diseños. Mi enfoque principal ha sido construir CRUDs y APIs para el backend, consolidando así una base sólida en mi camino de aprendizaje.
                     </p>
                     <p class="section__paragraph">
                         Si bien tengo planes de adentrarme en frameworks en el futuro, actualmente considero crucial afianzar mis conocimientos fundamentales. Mi objetivo es crecer de manera constante y contribuir al éxito de proyectos desafiantes.
