Modificación contenido - education

--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
                     <h4 class="education__title">Educación</h4>
                     <ul class="education__list">
                         <li class="education__item">
-                            Técnico Superior en Desarrollo de aplicaciones multiplataforma
+                            Técnico Superior en Desarrollo de aplicaciones multiplataforma (DAM)
                         </li>
                         <li class="education__item">
-                            Técnico Superior en Administración de Sistemas Informáticos en Red
+                            Técnico Superior en Administración de Sistemas Informáticos en Red (ASIR)
                         </li>
                     </ul>
                 </div>
