--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <div class="section__main section-1__main">
                 <div class="photo">
-                    <img src="assets/img/images/profile.jpg" alt="Foto de frank" class="photo__image">
+                    <img src="assets/img/images/profile_bg_filtro.jpg" alt="Foto de frank" class="photo__image">
                 </div>
                 <div class="section__text">
                     <h1 class="section__salute">Hola, soy Frank.</h1>
@@ -203,6 +203,9 @@
                 <div class="jobs">
                     <h4 class="jobs__title">Empleos</h4>
                     <ul class="jobs__list">
+                        <li class="jobs__item">
+                            Plexus Tech - Desarrollador de Software (Actual)
+                        </li>
                         <li class="jobs__item">
                             Pumpun dixital sl (Prácticas)
                         </li>
