cliente: adaptación del portfolio

--- a/portafolio.cliente/index.html
+++ b/portafolio.cliente/index.html
@@ -75,9 +75,11 @@
                     <img src="assets/img/images/profile_bg_filtro.jpg" alt="Foto de frank" class="photo__image">
                 </div>
                 <div class="section__text">
-                    <h1 class="section__salute">Hola, soy Frank.</h1>
+                    <h1 class="section__salute">
+                        <!-- Hola, soy Frank. -->
+                    </h1>
                     <div class="section-1__paragraphs">
-                        <p class="section__paragraph">
+                        <!-- <p class="section__paragraph">
                             Soy un Desarrollador full-stack, con conocimiento de React para el front-end. Mi enfoque actual se centra en la creación de experiencias de usuario dinámicas y atractivas.
 
 
@@ -85,7 +87,7 @@
                         <p class="section__paragraph">
                             En cuanto al back-end, tengo conocimientos en Java y PHP. Aunque puedo trabajar eficientemente con ambos, mi destreza actual se inclina más hacia la creación de APIs utilizando PHP. Estoy comprometido a ampliar mis conocimientos y adaptarme a las tecnologías más actuales para ofrecer mejores soluciones.
 
-                        </p>
+                        </p> -->
                     </div>
                 </div>
             </div>
@@ -105,8 +107,8 @@
                 </div>
             </div>
             <div class="section__main">
-                <div class="section-2__paragraphs ">
-                    <p class="section__paragraph">
+                <div class="section-2__paragraphs">
+                    <!-- <p class="section__paragraph">
                         <strong>Hola, soy Frank Ruiz,</strong> Desarrollador Multiplataforma & Web con conocimientos tanto de back como de front. En el último año, he dedicado mi tiempo a perfeccionar mis habilidades en la creación de interfaces atractivas y funcionales a partir de diseños. Mi enfoque principal ha sido construir CRUDs y APIs para el backend, consolidando así una base sólida en mi camino de aprendizaje.
                     </p>
                     <p class="section__paragraph">
@@ -120,7 +122,7 @@
                     </p>
                     <p class="section__paragraph">
                         Estoy ansioso por colaborar con un equipo dinámico que comparta mi entusiasmo y seguir perfeccionando mis habilidades. Si estás interesado en conectarte conmigo, por favor, no dudes en utilizar cualquiera de los medios de contacto que he proporcionado en la sección correspondiente.
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </section>
@@ -203,7 +205,7 @@
                 <div class="jobs">
                     <h4 class="jobs__title">Empleos</h4>
                     <ul class="jobs__list">
-                        <li class="jobs__item">
+                        <!-- <li class="jobs__item">
                             Plexus Tech - Desarrollador de Software (Actual)
                         </li>
                         <li class="jobs__item">
@@ -211,18 +213,18 @@
                         </li>
                         <li class="jobs__item">
                             CTGA Desarrollo y gestión
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="education">
                     <h4 class="education__title">Educación</h4>
                     <ul class="education__list">
-                        <li class="education__item">
+                        <!-- <li class="education__item">
                             Técnico Superior en Desarrollo de aplicaciones multiplataforma (DAM)
                         </li>
                         <li class="education__item">
                             Técnico Superior en Administración de Sistemas Informáticos en Red (ASIR)
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -268,7 +270,7 @@
     <footer class="footer">
         <div class="footer__links">
             <div class="footer__left">
-                <a href="https://github.com/fruizotero" target="_blank" class="footer__link">
+                <!-- <a href="https://github.com/fruizotero" target="_blank" class="footer__link">
                     <div class="icon">
                         <img src="assets/img/icons/github.svg" alt="icono de github" class="icon__image">
                     </div>
@@ -288,7 +290,7 @@
                         <img src="assets/img/icons/frontend-mentor-seeklogo.com.svg" alt="icono de frontend mentor"
                             class="icon__image">
                     </div>
-                </a>
+                </a> -->
             </div>
             <div class="footer__right">
                 <!-- <a href="#" class="footer__link">
